--- a/src/usr/lib/lua/luci/view/rtorrent/tvalue.htm
+++ b/src/usr/lib/lua/luci/view/rtorrent/tvalue.htm
@@ -1,5 +1,5 @@
 <style type="text/css">
-	.cbi-value-error textarea {
+	.cbi-value-error div.cbi-value-field > textarea {
 		border-color: #ff0000;
 		color: #ff0000;
 	}
